# shortcoder

./: README.md  pyproject.toml
examples/: html-links.py  link.py  youtube.py
shortcoder/: __init__.py  exceptions.py  manager.py  shortcodes.py  utils.py
shortcoder/shortcodes/: __init__.py  base.py  html.py
tests/: test_manager.py  test_utils.py
tests/test_shortcodes/: test_base.py  test_html.py
