[tool.poetry]
name = "shortcoder"
version = "0.1.0"
description = "bi-direction shortcode renderer"
authors = ["granitosaurus <bernardas.alisauskas@pm.me>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pylint = "^2.13.8"
flake8 = "^4.0.1"
taskipy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
pkg = "shortcoder"

[tool.taskipy.tasks]
test = "pytest tests/"
fmt = "black {pkg}"
check_fmt = "black --check {pkg}"
lint = "pylint {pkg}"
flake = "flake8 {pkg}"
check = "task check_fmt && task flake && task lint"
