[tool.poetry]
name = "shortcoder"
version = "0.3.0"
description = "bi-direction shortcode renderer"
authors = ["granitosaurus <bernardas.alisauskas@pm.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Granitosaurus/shortcoder"
repository = "https://github.com/Granitosaurus/shortcoder"
documentation = "https://github.com/Granitosaurus/shortcoder"
keywords = ["parsing", "shortcodes", "shortcode", "html"]
classifiers = [
    "Development Status :: 3 - Alpha",
]   

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.html]
optional = true

[tool.poetry.group.html.dependencies]
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
lxml = "^4.9.2"
ruff = "^0.0.254"
black = "^22.3.0"
taskipy = "^1.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.ruff]
line-length = 120

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
pkg = "shortcoder"

[tool.taskipy.tasks]
test = "pytest tests/"
fmt = "black {pkg}"
check_fmt = "black --check {pkg}"
lint = "ruff check {pkg}"
check = "task check_fmt && task lint"
